<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.NewCallFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CustomerLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/customer_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/editCustomer"
                style="@style/Base.Widget.MaterialComponents.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/customer_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/CallerLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/caller_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/editCaller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/CalleeLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/callee_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/editCallee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone" />

            <TextView
                android:id="@+id/StartLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/start_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/beginDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editBeginDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date" />

            <TextView
                android:id="@+id/beginTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/time_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editBeginTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time_hint"
                android:inputType="time" />

            <TextView
                android:id="@+id/EndLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/end_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/endDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/date_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date" />

            <TextView
                android:id="@+id/endTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/time_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/editEndTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time_hint"
                android:inputType="time" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_button" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="673dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>