<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="37dp" />

                <TextView
                    android:id="@+id/customerLabel3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_search_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <EditText
                    android:id="@+id/editCustomer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/customer_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/StartLabel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/start_search_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/beginDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/date_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editBeginDate3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date_hint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/beginTimeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/time_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editBeginTime3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/time_hint"
                    android:inputType="time" />

                <Switch
                    android:id="@+id/editBeginAM3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/am_label" />

                <TextView
                    android:id="@+id/EndLabel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/end_search_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/endDateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/date_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editEndDate3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/date_hint"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/endTimeLabel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/time_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/editEndTime3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/time_hint"
                    android:inputType="time" />

                <Switch
                    android:id="@+id/editEndAM3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/am_label" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="63dp" />

                <TextView
                    android:id="@+id/prettyBillLabel2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/search_hint" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="63dp" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>